[workspace]
members = ["code", "xtask"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
description = "A single btree database in rust"
keywords = ["btree", "storage", "database", "tutorial", "course"]
license = "MIT"
repository = "https://github.com/ChrisWrenDev/mini-btree"
homepage = "https://github.com/ChrisWrenDev/mini-btree"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
